--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sharp": "^0.29.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
