--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-sitemap --config next-sitemap-config.js"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/react": "^17.0.31",
     "markdown-it": "^12.2.0",
     "next": "latest",
+    "next-sitemap": "^1.6.192",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sharp": "^0.29.2"
+    "sharp": "^0.29.2",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
