--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "sharp": "^0.29.2",
     "typescript": "^4.4.4",
     "zustand": "^4.0.0-rc.1"
